
cc_library(
	name = "lockfree",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_atomic//:atomic",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_align//:align",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_parameter//:parameter",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_tuple//:tuple"
	],
)
